prevent About component overlap into Hoome and Skills components

--- a/src/App.css
+++ b/src/App.css
@@ -4,21 +4,14 @@ body {
   color: #14213d;
 }
 
-#Home {
-
-  /* background: #fca311; */
+/* #Home {
   height: 40vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
-}
+} */
 
 #Home-Text {
   font-size: 50px;
   padding-left: 2.5rem;
+  min-height: 30vh;
 }
 
 .bold-text {
@@ -42,7 +35,8 @@ body {
 
 /* About */
 #About {
-  height: 60vh;
+  /* trying to prevent text overlap into Skills component */
+  /* height: 60vh; */
   display: flex;
   justify-content: space-evenly;
   background: #14213d;
@@ -57,6 +51,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* trying to prevent text overlap into Skills component */
+  font-size: 2vmin;
+  /* white-space: pre-wrap; */
+  white-space: nowrap;
+  
 }
 
 #Contact {
@@ -70,7 +69,6 @@ body {
 }
 
 /* Skills */
-
 #Skills {
   display: flex;
   flex-direction: column;
